[gd_scene load_steps=9 format=2]

[ext_resource path="res://SimulationScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://MeetingRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu Buttons.tscn" type="PackedScene" id=3]
[ext_resource path="res://PopUpWindow2.tscn" type="PackedScene" id=4]
[ext_resource path="res://DialogBoxes.tscn" type="PackedScene" id=5]
[ext_resource path="res://StageSixDialogs.gd" type="Script" id=6]
[ext_resource path="res://TransitionStageScene.tscn" type="PackedScene" id=7]
[ext_resource path="res://StageSixImplement.gd" type="Script" id=8]

[node name="StageSixImplement" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="StageSixDialogs" type="Control" parent="."]
margin_left = 210.0
margin_top = 24.0
margin_right = 1146.0
margin_bottom = 680.0
script = ExtResource( 6 )
dialogue_file_path = "res://JSON/stage6.json"

[node name="MeetingRoom" parent="StageSixDialogs" instance=ExtResource( 2 )]
visible = false
position = Vector2( -210, -24 )

[node name="SimulationScene" parent="StageSixDialogs" instance=ExtResource( 1 )]
position = Vector2( -210, -24 )

[node name="PopUpWindow" parent="StageSixDialogs" instance=ExtResource( 4 )]
anchor_left = 0.588
anchor_top = 1.056
anchor_right = 0.588
anchor_bottom = 1.056
margin_left = -122.368
margin_top = -414.736
margin_right = -82.368
margin_bottom = -374.736

[node name="DialogBoxes" parent="StageSixDialogs" instance=ExtResource( 5 )]
visible = false
margin_left = 132.0
margin_top = 445.0
margin_right = -164.0
margin_bottom = 78.0

[node name="TransitionStageScene" parent="StageSixDialogs" instance=ExtResource( 7 )]
visible = false
position = Vector2( -210, -24 )

[node name="MenuButtons" parent="." instance=ExtResource( 3 )]

[connection signal="bars_complete" from="StageSixDialogs/SimulationScene" to="StageSixDialogs" method="_on_SimulationScene_bars_complete"]
[connection signal="pop_up_window_complete" from="StageSixDialogs/PopUpWindow" to="StageSixDialogs" method="_on_PopUpWindow_pop_up_window_complete"]
[connection signal="dialog_completed" from="StageSixDialogs/DialogBoxes" to="StageSixDialogs" method="_on_DialogBoxes_dialog_completed"]
